kubernetes/apps/frigate/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-service-lb
  namespace: frigate
  annotations:
    metallb.io/loadBalancerIPs: 192.168.10.127
spec:
  selector:
    app.kubernetes.io/name: frigate
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: rtsp
      protocol: TCP
      port: 8554
      targetPort: 8554
    - name: webrtc-tcp
      protocol: TCP
      port: 8555
      targetPort: 8555
    - name: webrtc-udp
      protocol: UDP
      port: 8555
      targetPort: 8555
  type: LoadBalancer
