kubernetes/apps/frigate/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-ui
  namespace: frigate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frigate.poolnode.net`)
      kind: Rule
      services:
        - name: frigate
          kind: Service
          namespace: frigate
          scheme: https
          port: 8971
          serversTransport: frigate-transport
  tls:
    secretName: poolnode-wildcard-tls
